image stopped flickering

--- a/pacMan/stylesheet.css
+++ b/pacMan/stylesheet.css
@@ -1,5 +1,5 @@
-canvas {
-
+body{
+  background-color: aliceblue;
 }
 
 #center{
